added mailchimp and more about and changes sensor layout

--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
 
 	        	<div class="inner inner-text">
 		        	<h2>About <span>HiveEmpire</span></h2>
-		        	<h4>Who are we</h4>
+		        	<h4>Who we are</h4>
 		        	<p>We are a collection of technical topic specialists keen on getting involved in the beekeeping community.</p>
 		        	<p>Our aims include assisting academics gather data in this fascinating field and providing insign into the lives and processess of these fascinating creatures.</p>
 		        </div>
@@ -99,8 +99,10 @@
 
 	    	<div class="span6">
 
-	        	<div class="inner">
-
+	        	<div class="inner inner-text">
+	        		<p>HiveEmpire aims to provide low-cost modular sensors and a revolutionary turn key monitoring solution.</p>
+	        		<p>Using machine-learning and expert knowledge we plan to provide you with imperic data-driven knowledge about your hive and the processes in play.</p>
+	        		<p>Using the power of community and co-operation we plan to make bee-keeping more than a hobby and more of an obsession.</p>
 		        	<!-- <img src="pictures/desktop-inline.png" alt="Desktop" class="promoimg" /> -->
 
 		        </div>
@@ -116,6 +118,48 @@
 </div>
 
 <div class="strip highlight">
+
+	<div class="container">
+
+        <div class="row">
+
+	    	<div class="span6">
+
+	        	<div class="inner inner-text">
+		        	<h2>HiveEmpire <span>Founders</span></h2>
+		        	<h4>Damn Crazy kids</h4>
+		        	<p>The HiveEmpire founders are a long-term sofware and multi-startup founder and an expert hardware and it-solutions provider, who came together with common interests and a desire to get involved in the ancient science of bee-keeping.</p>
+		        </div>
+
+	    	</div>
+
+	    	<div class="span3">
+
+	        	<div class="inner inner-text">
+	        		<h4>Ross</h4>
+	        		<p>Coming Soon.</p>
+						</div>
+				</div>
+
+	    	<div class="span3">
+
+	        	<div class="inner inner-text">
+	        		<h4>Dennis</h4>
+	        		<p>Coming Soon.</p>
+
+		        </div>
+
+	    	</div>
+
+	    	<div class="clearfix"></div>
+
+	    </div>
+
+	</div>
+
+</div>
+
+<div class="strip highlight strip-alt">
 
 	<div class="container">
 
@@ -166,7 +210,6 @@
 	</div>
 
 </div>
-
 
 <div class="clearfix"></div>
 
