--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
 	<link rel="stylesheet" href="css/simple-line-icons.css">
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,400,300,600,700' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
-	<meta name="description" content="Beehive Monitoring and Sensor Service">
+	<meta name="description" content="Beehive Monitoring &amp; Sensor Service">
 	<meta name="keywords" content="bee hive sensor monitoring service">
 	<meta name="viewport" content="width=device-width">
 	<meta name="google-site-verification" content=""/>
 	<!-- <meta itemprop="productID" content=""/> -->
 	<meta itemprop="category" content="Monitoring & Technology"/>
-<!-- 	<meta itemprop="brand" content=""/>
+<!-- 	<meta itemprop="br&amp;" content=""/>
 	<meta itemprop="model" content=""/>
 	<meta itemprop="image" content=""/> -->
 	<meta property="og:title" content="Complete Beehive Monitoring - Hive Empire"/>
-	<meta property="og:description" content="Beehive Monitoring and Sensor Service"/>
+	<meta property="og:description" content="Beehive Monitoring &amp; Sensor Service"/>
 	<meta property="og:image" content="https://pbs.twimg.com/profile_images/671789517230084096/2JC6XicL_400x400.jpg"/>
 <!-- 	<meta name="apple-itunes-app" content="app-id=">
 	<meta name="google-play-app" content="app-id="> -->
@@ -102,7 +102,7 @@
 	        				<div class="top">
 
 		        				<h2><span class="glyph-item  icon-pencil" aria-hidden="true"></span> Get in touch</h2>
-		        				<p>Please complete the form and we will get back to you.</p>
+		        				<p>Please complete the form &amp; we will get back to you.</p>
 
 	        				</div>
 
@@ -157,7 +157,7 @@
 	        		<span class="glyph-item mega icon-screen-desktop" aria-hidden="true"></span>
 
 		        	<h3>Complete</h3>
-		        	<p>Temperature, Humidity, Video, Weight, In/Out Count.<br/><b>In touch &amp; in control</b><br/><em>Sensors that keep you n touch with your hive.</em></p>
+		        	<p>Temperature, Humidity, Video, Weight, In/Out Count.<br/><b>In touch &amp; in control</b><br/><em>Sensors that keep you in touch with your hive.</em></p>
 
 		        </div>
 
@@ -172,7 +172,7 @@
 		        	<h3>Simple</h3>
 		        	<p>
 		        	  <b>1.</b> Place sensors.<br/>
-		        	  <b>2.</b> Turn on the <em><b>HiveEmpire-Sense&#8482;</b></em> and connect to the internet.<br/>
+		        	  <b>2.</b> Turn on the <em><b>HiveEmpire-Sense&#8482;</b></em> &amp; connect to the internet.<br/>
 		        	  <b>3.</b> Know your Hive
 		        	</p>
 
@@ -187,9 +187,10 @@
 	        		<span class="glyph-item mega icon-screen-smartphone" aria-hidden="true"></span>
 
 		        	<h3>Smart &amp; Fun</h3>
-		        	<p>Our Mobile and web app HiveEmpire&#8482;, gives you direct and simple access to the hive data and streaming video.</p>
-		        	<p>HiveEmpire will let you know when important events are due and provide you with contact to people who know.</p>
-
+		        	<p>Our Mobile &amp; web app HiveEmpire&#8482;, gives you direct &amp; simple access to the hive data &amp; streaming video.</p>
+		        	<p>HiveEmpire will alert you when important events happen.</p>
+		        	<p>We plan of providing access to a rich helpful community to get you answers when you need them.</p>
+		        	<!-- <p>HiveEmpire Hive Concierge service</p> -->
 		        </div>
 
 	    	</div>
@@ -202,8 +203,8 @@
 	        		<span class="glyph-item mega icon-users" aria-hidden="true"></span>
 
 		        	<h3>Sell your hive's honey cooperatively</h3>
-		        	<p>Join our drive to get great locally produced honey into the global market and generate a revenue</p>
-		        	<p>The cooperative part of HiveEmpire also lets you get support and even concierge management of your hives, freeing you up to focus on other matters.</p>
+		        	<p>Join our drive to get great locally produced honey into the global market &amp; generate a revenue</p>
+		        	<!-- <p>The cooperative part of HiveEmpire also lets you get support &amp; even concierge management of your hives, freeing you up to focus on other matters.</p> -->
 
 		        </div>
 
@@ -228,8 +229,8 @@
 
 	        	<div class="inner inner-text">
 		        	<h2>Know <span>your Hive</span></h2>
-		        	<h4>The best part of bee-keeping is getting to know your hive its bees and of course the Queen</h4>
-		        	<p>HiveEmpire aims to get you even closer to this process and give you 24 hour but low-impact monitoring, thus giving your bees the space they need to do their thing but also giving you precise real-time data.</p>
+		        	<h4>The best part of bee-keeping is getting to know your hive its bees &amp; of course the Queen</h4>
+		        	<p>HiveEmpire aims to get you even closer to this process &amp; give you 24 hour low-impact monitoring. Giving your bees the space they need to do their thing, but also insight &amp; access to precise hive metrics &amp; data as it happens.</p>
 		        </div>
 
 	    	</div>
@@ -274,9 +275,9 @@
 	        	<div class="inner inner-text">
 
 		        	<h2>Connect <span>&amp; Engage</span></h2>
-		        	<h4>At HiveEmpire we believe in networks and connecting people.</h4>
-		        	<p>We are building a large support network and access to knowledge and resources you would normally take years to build and manage.</p>
-		        	<p>We also believe in the power of co-operative production and with your help will be leading the charge into pure honey supply into the worlds markets.</p>
+		        	<h4>At HiveEmpire we believe in networks &amp; connecting people.</h4>
+		        	<p>We are building a large support network &amp; access to knowledge &amp; resources you would normally take years to build &amp; manage.</p>
+		        	<p>We also believe in the power of co-operative production &amp; with your help will be leading the charge into pure honey supply into the worlds markets.</p>
 
 		        </div>
 
@@ -301,11 +302,11 @@
 
 	        	<div class="inner inner-text">
 
-		        	<h2>Buy <span>HiveEmpire-Sense&#8482;</span></h2>
-		        	<h4>Buy one HiveEmpire-Sense&#8482; and its sensors via the starter-pack</h4>
-		        	<p>But of course you can buy replacements too.</p>
-		        	<p>Remember 1 HiveEmpire-Sense&#8482; can run as many sensors as you like (tho we do recommend a max of 50)</p>
-		        	<p>We are constantly thinking of new sensors to add to the set and are happy to take special requests</p>
+		        	<h2>Buy the <span>HiveEmpire-Sense&#8482;</span></h2>
+		        	<h4>Buy 1x HiveEmpire-Sense&#8482; &amp; its sensors via the <a href="#starter-pack">Starter Kit</a></h4>
+		        	<p><b>Remember</b> 1x HiveEmpire-Sense&#8482; can run up to 50 sensors. So if you have more than 1 hive, you jsut need to buy additional <a href="#sensor-pack">Sensor Packs</a></p>
+		        	<p>We are constantly thinking of new sensors to add to the set &amp; are happy to take special requests</p>
+							<p>Remember you only need 1 <b>HiveEmpire-Sense&#8482;</b> to monitor up to 50 hives, so you only need an additional <a href="#sensor-pack">Sensor Pack</a> per hive.</p>
 
 		        </div>
 
@@ -348,7 +349,7 @@
 	        	<div class="inner inner-text">
 		        	<h2>Global <span>Co-operative Honey supply</span></h2>
 		        	<h4>Co-operative honey production &amp; supply to the world.</h4>
-		        	<p>Once your hive is producing honey and you have learned the basics, you can then become a honey supplier and contribute to the co-operative supply of raw honey from local producers in your area.</p>
+		        	<p>Once your hive is producing honey &amp; you have learned the basics, you can then become a honey supplier &amp; contribute to the co-operative supply of raw honey from local producers in your area.</p>
 		        </div>
 
 	    	</div>
@@ -370,35 +371,35 @@
 
 			<div class="span4">
 		    	<div class="inner secondary">
+		    		<a name="starter-pack"></a>
 		    		<ul>
 						<li><h2>Starter Kit</h2></li>
 						<li class="price"><h1><span>$ </span><strong>150</strong></h1></li>
 						<li>1x HiveEmpire-Sense™ &amp; sensor pack</li>
-						<li>1 month app access free, $12 per month thereafter</li>
 						<li>1x Temperature &amp; Humidity Sensor</li>
 						<li>4x Weight Sensors</li>
-						</ul>
-						<span class="buy-now"><a href="#" class="btn buy-now">Buy Now</a></span>
-		    	</div>
-		  </div>
-
-			<div class="span4">
-		    	<div class="inner secondary">
-
-		    		<ul>
-						<li><h2>Replacement HiveEmpire-Sense™ Device</h2></li>
-						<li class="price"><h1><span>$ </span><strong>120</strong></h1></li>
 						<li>Power cable</li>
+						<li>LAN cable</li>
+						<li>1 month app access free, $12 per month thereafter</li>
 						</ul>
 						<span class="buy-now"><a href="#" class="btn buy-now">Buy Now</a></span>
-
 		    	</div>
 		  </div>
+			<div class="span8" style="padding-top:35px;">
+				<h3>The <b>HiveEmpire-Sense&#8482;</b> starter pack</h3>
+				<p>Contains all you need to get 1 hive setup &amp; monitored.</p>
+				<p>Remember you only need 1 <b>HiveEmpire-Sense&#8482;</b> to monitor up to 50 hives, so you only need an additional <a href="#sensor-pack">Sensor Pack</a> per hive.</p>
+			</div>
+
+		</div>
+
+		<div class="row blocks">
 
 			<div class="span4">
 		    	<div class="inner secondary">
+		    		<a name="sensor-pack"></a>
 		    		<ul>
-						<li><h2>Sensor Pack</h2></li>
+						<li><h2>Hive Sensor Pack</h2></li>
 						<li class="price"><h1><span>$ </span><strong>40</strong><small></small></h1></li>
 						<li>1x Temperature &amp; Humidity Sensor</li>
 						<li>4x Weight Sensors</li>
@@ -407,14 +408,46 @@
 		    	</div>
 		  </div>
 
+			<div class="span8" style="padding-top:35px;">
+				<h3>Hive Sensor Pack</h3>
+				<p>1x Hive Sensor Pack per hive</p>
+				<p>We provide a st&amp;ard sensor pack, the aim of which being to monitor the temperature, humidity &amp; weight of a singl Hive. But, nothing stops you from using the temp/humidity sensors on one Hive &amp; the weight Sensor on another.</p>
+				<p>You should just need to notate that in the HiveEmpire app for your own memories sake.</p>
+			</div>
+
+		</div>
+
 		<div class="row blocks">
 
 			<div class="span4">
 		    	<div class="inner secondary">
 		    		<ul>
-						<li><h2>In/Out Counter</h2></li>
+						<li><h2>Replacement HiveEmpire-Sense&#8482; Device</h2></li>
+						<li class="price"><h1><span>$ </span><strong>120</strong></h1></li>
+						<li>Power cable</li>
+						<li>LAN cable</li>
+						</ul>
+						<span class="buy-now"><a href="#" class="btn buy-now">Buy Now</a></span>
+		    	</div>
+		  </div>
+
+			<div class="span8" style="padding-top:35px;">
+				<h3>Replacement HiveEmpire-Sense&#8482; Device</h3>
+				<p>Sometimes s*it happens, &amp; the device gets damaged, dropped, submerged in water or even thrown from car windows (yes, it happens).</p>
+				<p>In this case a replacement device is called for.</p>
+				<!-- <p>If the device is damaged en-route or on delivery then we will replace it free of charge.</p> -->
+			</div>
+
+		</div>
+
+		<div class="row blocks">
+
+			<div class="span4">
+		    	<div class="inner secondary">
+		    		<ul>
+						<li><h2>In/Out Counter<br/><small>(In development)</small></h2></li>
+						<li><b>Coming soon</b></li>
 						<li>Counter bees as they enter or exit the hive</li>
-						<li>Coming soon</li>
 						<li class="price"><h1><span>$ </span><strong>80</strong><small></small></h1></li>
 						</ul>
 						<span class="buy-now"><a href="#" class="btn buy-now">Buy Now</a></span>
@@ -424,14 +457,20 @@
 			<div class="span4">
 		    	<div class="inner secondary">
 		    		<ul>
-						<li><h2>Realtime Video</h2></li>
+						<li><h2>Realtime Video<br/><small>(In development)</small></h2></li>
+						<li><b>Coming soon</b></li>
 						<li>Camera to capture your bees as they, be bees.</li>
-						<li>Coming soon</li>
 						<li class="price"><h1><span>$ </span><strong>80</strong><small></small></h1></li>
 						</ul>
 						<span class="buy-now"><a href="#" class="btn buy-now">Buy Now</a></span>
 		    	</div>
 		  </div>
+
+			<div class="span4" style="padding-top:35px;">
+				<h3>Sensors In Planning</h3>
+				<p>These sensors are currently in the <b>Planning &amp Design</b> phase</p>
+				<p>Please <a data-ga-event="contact-us" data-group="sensors-in-planning" data-description="Interested in Sensors in Planning" href="contact-form">contact us and let us know if this interests you.</a></p>
+			</div>
 
 		</div>
 
@@ -446,6 +485,29 @@
 <div class="clearfix"></div>
 
 <div id="footer">
+
+<div class="col-md-6">
+	<!-- Begin MailChimp Signup Form -->
+	<link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
+	<style type="text/css">
+		#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+		/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+		   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+	</style>
+	<div id="mc_embed_signup">
+	<form action="//hive-empire.us12.list-manage.com/subscribe/post?u=7d79b6d15790a93b6ba7976ad&amp;id=14d2aaceac" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+	    <div id="mc_embed_signup_scroll">
+		<label for="mce-EMAIL">HiveEmpire - News &amp; Updates</label>
+		<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+	    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+	    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_7d79b6d15790a93b6ba7976ad_14d2aaceac" tabindex="-1" value=""></div>
+	    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+	    </div>
+	</form>
+	</div>
+</div>
+
+<!--End mc_embed_signup-->
 
 	<p>
 <!-- 		<a href="/"><span class="glyph-item mega icon-social-youtube" aria-hidden="true"></span></a> -->
@@ -471,10 +533,10 @@
 <script src="js/jquery.validate.min.js"></script>
 <!-- <script src="js/contact.js"></script> -->
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/h&amp;lebars.js/4.0.5/h&amp;lebars.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/parsley.js/2.1.2/parsley.min.js"></script>
 
-<script id="tpl-thanks-for-interest" type="text/x-handlebars-template">
+<script id="tpl-thanks-for-interest" type="text/x-h&amp;lebars-template">
 <div class="row">
     <div class="well well-lg">
         <div class="media feature">
@@ -486,15 +548,15 @@
             </div>
         </div>
         <p>We appreciate your interest in HiveEmpire.</p>
-        <p>We are currently hard at work producing our v2 product and sensor set.</p>
-        <p>Please drop us a line to express your interest and ask any questions you may have.</p>
+        <p>We are currently hard at work producing our v2 product &amp; sensor set.</p>
+        <p>Please drop us a line to express your interest &amp; ask any questions you may have.</p>
         <p>Regards,<br/><b>HiveEmpire</b></p>
 
     </div>
 </div>
 </script>
 
-<script id="tpl-contact-thank-you" type="text/x-handlebars-template">
+<script id="tpl-contact-thank-you" type="text/x-h&amp;lebars-template">
 <div class="row">
     <div class="well well-lg">
         <div class="media feature">
@@ -563,6 +625,13 @@
           $($(this).closest('span.buy-now')).html(template({}));
           ga('send', 'event', 'Products', 'buy', 'Clicked Buy Now');
 	    });
+
+	    $('data[ga-event]').on('click', function ( event ) {
+	        event.preventDefault();
+	        data = ($this).data();
+          ga('send', 'event', data.group, data.event, data.description);
+	    });
+
 	});
 </script>
 
