--- a/index.html
+++ b/index.html
@@ -533,10 +533,10 @@
 <script src="js/jquery.validate.min.js"></script>
 <!-- <script src="js/contact.js"></script> -->
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/h&amp;lebars.js/4.0.5/h&amp;lebars.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/parsley.js/2.1.2/parsley.min.js"></script>
 
-<script id="tpl-thanks-for-interest" type="text/x-h&amp;lebars-template">
+<script id="tpl-thanks-for-interest" type="text/x-handlebars-template">
 <div class="row">
     <div class="well well-lg">
         <div class="media feature">
@@ -556,7 +556,7 @@
 </div>
 </script>
 
-<script id="tpl-contact-thank-you" type="text/x-h&amp;lebars-template">
+<script id="tpl-contact-thank-you" type="text/x-handlebars-template">
 <div class="row">
     <div class="well well-lg">
         <div class="media feature">
