--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
 			<div class="span4" style="padding-top:35px;">
 				<h3>Sensors In Planning</h3>
 				<p>These sensors are currently in the <b>Planning &amp Design</b> phase</p>
-				<p>Please <a data-ga-event="contact-us" data-group="sensors-in-planning" data-description="Interested in Sensors in Planning" href="contact-form">contact us and let us know if this interests you.</a></p>
+				<p>Please <a data-ga-event="contact-us" data-group="sensors-in-planning" data-description="Interested in Sensors in Planning" href="#contact-form">contact us and let us know if this interests you.</a></p>
 			</div>
 
 		</div>
