--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
 							<li><a href="/about.html">About</a></li>
 							<li><a href="https://hiveempireblog.wordpress.com">Blog</a></li>
 							<li><a href="/docs/">Get Started</a></li>
+							<li><a href="#mailchimp">Newsletter</a></li>
+							<li><a href="#survey">Survey</a></li>
 							<li><a href="http://app.hive-empire.com/sign-up.html">Sign Up</a></li>
 							<li><a href="http://app.hive-empire.com/sign-in.html">Sign In</a></li>
 							<li><a href="/index.html#pricing">Buy <b>HiveEmpire-Sense&#8482;</b></a></li>
@@ -482,47 +484,115 @@
 
 </div>
 
+
+<div class="strip highlight">
+	<a name="mailchimp"></a>
+	<div class="container">
+
+        <div class="row">
+
+	    	<div class="span6">
+
+	        	<div class="inner inner-text">
+		        	<h2>Subscribe to our <span>Newsletter</span></h2>
+		        	<h4>Stay up-to-date.</h4>
+		        </div>
+
+	    	</div>
+
+	    	<div class="span6">
+
+	        	<div class="inner">
+					<!-- Begin MailChimp Signup Form -->
+					<link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
+					<style type="text/css">
+						#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+						/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+						   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+					</style>
+					<div id="mc_embed_signup">
+						<form action="//hive-empire.us12.list-manage.com/subscribe/post?u=7d79b6d15790a93b6ba7976ad&amp;id=14d2aaceac" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+						    <div id="mc_embed_signup_scroll">
+							<label for="mce-EMAIL">HiveEmpire - News &amp; Updates</label>
+							<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+						    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+						    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_7d79b6d15790a93b6ba7976ad_14d2aaceac" tabindex="-1" value=""></div>
+						    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+						    </div>
+						</form>
+					</div>
+					<!--End mc_embed_signup-->
+		        </div>
+
+	    	</div>
+
+	    	<div class="clearfix"></div>
+
+	    </div>
+
+	</div>
+
+</div>
+
+
+
+<div class="strip highlight strip-alt">
+	<a name="survey"></a>
+	<div class="container">
+
+        <div class="row">
+
+	    	<div class="span6">
+
+	        	<div class="inner inner-text">
+
+		        	<h2>Express your <span>Opinion</span></h2>
+		        	<h4>Take part in a short survey</h4>
+		        	<p>This will help us determine what to focus on for the first phase of development</p>
+
+		        </div>
+
+	    	</div>
+
+	    	<div class="span6">
+
+	        	<div class="inner">
+
+						<!--- Begin SurveyPlanet survey embed--><iframe frameborder="0" width="640" height="480" src="https://surveyplanet.com/5666901e78e0233a6d145004"></iframe><!--- End SurveyPlanet survey embed -->
+
+		        </div>
+
+	    	</div>
+
+	    	<div class="clearfix"></div>
+
+	    </div>
+
+	</div>
+
+</div>
+
+
+
 <div class="clearfix"></div>
 
 <div id="footer">
+	<div class="col-md-6">
+		<p>
+	<!-- 		<a href="/"><span class="glyph-item mega icon-social-youtube" aria-hidden="true"></span></a> -->
+			<a target="_NEW" href="https://twitter.com/hiveempireapp"><span class="glyph-item mega icon-social-twitter" aria-hidden="true"></span></a>
+			<a target="_NEW" href="https://hiveempireapp.wordpress.com"><span class="glyph-item mega icon-social-wordpress" aria-hidden="true"></span></a>
+	<!-- 		<a href="/"><span class="glyph-item mega icon-social-tumblr" aria-hidden="true"></span></a>
+			<a href="/"><span class="glyph-item mega icon-social-facebook" aria-hidden="true"></span></a>
+			<a href="/"><span class="glyph-item mega icon-social-dropbox" aria-hidden="true"></span></a>
+			<a href="/"><span class="glyph-item mega icon-social-dribbble" aria-hidden="true"></span></a> -->
+		</p>
 
-<div class="col-md-6">
-	<!-- Begin MailChimp Signup Form -->
-	<link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
-	<style type="text/css">
-		#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
-		/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-		   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-	</style>
-	<div id="mc_embed_signup">
-	<form action="//hive-empire.us12.list-manage.com/subscribe/post?u=7d79b6d15790a93b6ba7976ad&amp;id=14d2aaceac" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-	    <div id="mc_embed_signup_scroll">
-		<label for="mce-EMAIL">HiveEmpire - News &amp; Updates</label>
-		<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-	    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-	    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_7d79b6d15790a93b6ba7976ad_14d2aaceac" tabindex="-1" value=""></div>
-	    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-	    </div>
-	</form>
+		Copyright &copy; 2014
+
+		<div class="clearfix"></div>
+
 	</div>
-</div>
-
-<!--End mc_embed_signup-->
-
-	<p>
-<!-- 		<a href="/"><span class="glyph-item mega icon-social-youtube" aria-hidden="true"></span></a> -->
-		<a target="_NEW" href="https://twitter.com/hiveempireapp"><span class="glyph-item mega icon-social-twitter" aria-hidden="true"></span></a>
-		<a target="_NEW" href="https://hiveempireapp.wordpress.com"><span class="glyph-item mega icon-social-wordpress" aria-hidden="true"></span></a>
-<!-- 		<a href="/"><span class="glyph-item mega icon-social-tumblr" aria-hidden="true"></span></a>
-		<a href="/"><span class="glyph-item mega icon-social-facebook" aria-hidden="true"></span></a>
-		<a href="/"><span class="glyph-item mega icon-social-dropbox" aria-hidden="true"></span></a>
-		<a href="/"><span class="glyph-item mega icon-social-dribbble" aria-hidden="true"></span></a> -->
-	</p>
-
-	Copyright &copy; 2014
-
-	<div class="clearfix"></div>
-
 </div>
 
 <!--[if lte IE 7]><script src="js/icons-lte-ie7.js"></script><![endif]-->
