--- a/index.html
+++ b/index.html
@@ -645,6 +645,19 @@
 </div>
 </script>
 
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-70859032-1', 'auto');
+	ga('send', 'pageview', location.pathname);
+
+</script>
+
+
 <script>
 	'use strict';
 	$(document).ready(function() {
@@ -693,27 +706,26 @@
 	        var source   = $("script#tpl-thanks-for-interest").html();
           var template = Handlebars.compile(source);
           $($(this).closest('span.buy-now')).html(template({}));
-          ga('send', 'event', 'Products', 'buy', 'Clicked Buy Now');
+					ga('send', {
+					  'hitType': 'event',          // Required.
+					  'eventCategory': 'Products',   // Required.
+					  'eventAction': 'buy',      // Required.
+					  'eventLabel': 'Clicked Buy Now'
+					});
 	    });
 
 	    $('data[ga-event]').on('click', function ( event ) {
 	        event.preventDefault();
 	        data = ($this).data();
-          ga('send', 'event', data.group, data.event, data.description);
+					ga('send', {
+					  'hitType': 'event',          // Required.
+					  'eventCategory': data.group,   // Required.
+					  'eventAction': data.event,      // Required.
+					  'eventLabel': data.description
+					});
 	    });
 
 	});
-</script>
-
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-70859032-1', 'auto');
-	ga('send', 'pageview', location.pathname);
-
 </script>
 
 </body>
