--- a/about.html
+++ b/about.html
@@ -127,7 +127,7 @@
 
 	        	<div class="inner inner-text">
 		        	<h2>HiveEmpire <span>Founders</span></h2>
-		        	<h4>Damn Crazy kids</h4>
+		        	<h4>Damn Crazy Kids</h4>
 		        	<p>The HiveEmpire founders are a long-term sofware and multi-startup founder and an expert hardware and it-solutions provider, who came together with common interests and a desire to get involved in the ancient science of bee-keeping.</p>
 		        </div>
 
