--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@
 					});
 	    });
 
-	    $('data[ga-event]').on('click', function ( event ) {
+	    $('[data-ga-event]').on('click', function ( event ) {
 	        event.preventDefault();
 	        data = ($this).data();
 					ga('send', {
