--- a/index.html
+++ b/index.html
@@ -305,10 +305,10 @@
 	        	<div class="inner inner-text">
 
 		        	<h2>Buy the <span>HiveEmpire-Sense&#8482;</span></h2>
-		        	<h4>Buy 1x HiveEmpire-Sense&#8482; &amp; its sensors via the <a href="#starter-pack">Starter Kit</a></h4>
-		        	<p><b>Remember</b> 1x HiveEmpire-Sense&#8482; can run up to 50 sensors. So if you have more than 1 hive, you jsut need to buy additional <a href="#sensor-pack">Sensor Packs</a></p>
+		        	<h4>Buy 1x HiveEmpire-Sense&#8482; &amp; its sensors via the <a data-ga-event="starter-kit" data-group="current-kit" data-description="Wants to buy starter kit" href="#starter-pack">Starter Kit</a></h4>
+		        	<p><b>Remember</b> 1x HiveEmpire-Sense&#8482; can run up to 50 sensors. So if you have more than 1 hive, you jsut need to buy additional <a data-ga-event="sensor-pack" data-group="current-sensors" data-description="Wants to buy sensor pack" href="#sensor-pack">Sensor Packs</a></p>
 		        	<p>We are constantly thinking of new sensors to add to the set &amp; are happy to take special requests</p>
-							<p>Remember you only need 1 <b>HiveEmpire-Sense&#8482;</b> to monitor up to 50 hives, so you only need an additional <a href="#sensor-pack">Sensor Pack</a> per hive.</p>
+							<p>Remember you only need 1 <b>HiveEmpire-Sense&#8482;</b> to monitor up to 50 hives, so you only need an additional <a data-ga-event="sensor-pack" data-group="current-sensors" data-description="Wants to buy sensor pack" href="#sensor-pack">Sensor Pack</a> per hive.</p>
 
 		        </div>
 
