--- a/index.html
+++ b/index.html
@@ -573,6 +573,39 @@
 </div>
 
 
+<div class="strip highlight">
+	<a name="mailchimp"></a>
+	<div class="container">
+
+        <div class="row">
+
+	    	<div class="span6">
+
+	        	<div class="inner inner-text">
+		        	<h2>News from <span>Twitter</span></h2>
+		        	<h4>News as it happens.</h4>
+		        </div>
+
+	    	</div>
+
+	    	<div class="span6">
+
+	        	<div class="inner">
+							<a class="twitter-timeline" href="https://twitter.com/HiveEmpireApp" data-widget-id="674501638133030912">Tweets by @HiveEmpireApp</a>
+							<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+		        </div>
+
+	    	</div>
+
+	    	<div class="clearfix"></div>
+
+	    </div>
+
+	</div>
+
+</div>
+
+
 
 <div class="clearfix"></div>
 
