--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 	        		<span class="glyph-item mega icon-screen-smartphone" aria-hidden="true"></span>
 
 		        	<h3>Smart &amp; Fun</h3>
-		        	<p>Our Mobile &amp; web app HiveEmpire&#8482;, gives you direct &amp; simple access to the hive data &amp; streaming video.</p>
+		        	<p>HiveEmpire&#8482;, gives you direct &amp; simple access to the hive data &amp; streaming video.</p>
 		        	<p>HiveEmpire will alert you when important events happen.</p>
 		        	<p>We plan of providing access to a rich helpful community to get you answers when you need them.</p>
 		        	<!-- <p>HiveEmpire Hive Concierge service</p> -->
