--- a/index.html
+++ b/index.html
@@ -72,19 +72,11 @@
 							</div>
 						</div>
 					</div>
-					<div class="span6">
+					<div id="header-promo" class="span6">
 						<div class="inner">
 							<div id="hero-box" class="form-box">
-								<div class="top">
-									<h2><span class="glyph-item icon-pencil" aria-hidden="true"></span> Live Data</h2>
-									<p>From the v1. prototype.</p>
-								</div>
-								<div class="bottom">
-									<iframe src="http://schweinhun.de/graphs/dashboard-solo/db/beekeep-sensor-roadprototype?panelId=3&fullscreen" width="100%" height="200" frameborder="0"></iframe>
-									<iframe src="http://schweinhun.de/graphs/dashboard-solo/db/beekeep-sensor-roadprototype?panelId=5&fullscreen" width="100%" height="200" frameborder="0"></iframe>
-								</div>
+								<img src="/images/preview/devices-preview.png" alt="Preview of Devices Page" class="promoimg" />
 							</div>
-
 						</div>
 					</div>
 				</div>
@@ -147,6 +139,30 @@
 						</div>
 					</div>
 					<div class="span6">
+
+						<div class="inner">
+
+								<div class="top">
+									<h2><span class="glyph-item icon-pencil" aria-hidden="true"></span> Live Data</h2>
+									<p>From the v1. prototype.</p>
+								</div>
+								<div class="bottom">
+									<iframe src="http://schweinhun.de/graphs/dashboard-solo/db/beekeep-sensor-roadprototype?panelId=3&fullscreen" width="100%" height="200" frameborder="0"></iframe>
+									<iframe src="http://schweinhun.de/graphs/dashboard-solo/db/beekeep-sensor-roadprototype?panelId=5&fullscreen" width="100%" height="200" frameborder="0"></iframe>
+								</div>
+
+						</div>
+
+					</div>
+					<div class="clearfix"></div>
+				</div>
+			</div>
+		</div>
+		<div class="strip highlight">
+			<div class="container">
+				<div class="row">
+					<div class="span6">
+
 						<div class="inner">
 							<div class="form-box">
 								<div class="top">
@@ -171,18 +187,7 @@
 								</div>
 							</div>
 						</div>
-					</div>
-					<div class="clearfix"></div>
-				</div>
-			</div>
-		</div>
-		<div class="strip highlight">
-			<div class="container">
-				<div class="row">
-					<div class="span6">
-						<div class="inner">
-							<img src="https://cdn2.iconfinder.com/data/icons/business-charts/512/relations-512.png" alt="Desktop" class="promoimg" />
-						</div>
+
 					</div>
 					<div class="span6">
 						<div class="inner inner-text">
