working on stuff

--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@
 					<div class="span6">
 						<div class="inner inner-text">
 							<h2>Know <span>your Hive</span></h2>
-							<h4>Data turns your hobby into an obsession.</h4>
-							<p>The best part of bee-keeping is getting to know your hive, its bees &amp; their Queen.. This takes time, requires patience and really, you will always simply be a temporary invader &amp; nuisance to your bees.</p>
-							<p>HiveEmpire wants to get you closer to the bees &amp; give you 24 hour low-impact monitoring. Giving your bees the space they need to do their thing, but also insight &amp; access to precise hive metrics &amp; data as it happens and data to feed your obsession.</p>
+							<h4>Data + Beekeeping = Obsession.</h4>
+							<p>The best part of bee-keeping is getting to know your hive &amp; its bees. This takes time, requires patience and in reality, you will always be a temporary invader &amp; nuisance to your bees.</p>
+							<p>HiveEmpire wants to get you closer to the bees &amp; give you 24 hour low-impact monitoring. Giving your bees the space they need to do their thing, but also provide you with insight &amp; access to precise hive metrics. Data, as it happens; &amp; data to feed your obsession.</p>
 						</div>
 					</div>
 					<div class="span6">
@@ -144,12 +144,13 @@
 
 								<div class="top">
 									<h2><span class="glyph-item icon-pencil" aria-hidden="true"></span> Live Data</h2>
-									<p>From the v1. prototype.</p>
+									<p>From our v1. prototype</p>
 								</div>
 								<div class="bottom">
 									<iframe src="http://schweinhun.de/graphs/dashboard-solo/db/beekeep-sensor-roadprototype?panelId=3&fullscreen" width="100%" height="200" frameborder="0"></iframe>
 									<iframe src="http://schweinhun.de/graphs/dashboard-solo/db/beekeep-sensor-roadprototype?panelId=5&fullscreen" width="100%" height="200" frameborder="0"></iframe>
 								</div>
+								<p><small><em>*</em>May be offline form time-to-time</small>.</p>
 
 						</div>
 
@@ -193,7 +194,7 @@
 						<div class="inner inner-text">
 							<h2>Connect <span>&amp; Engage</span></h2>
 							<h4>At HiveEmpire we believe in networks &amp; connecting people.</h4>
-							<p>We are building a large support network &amp; access to knowledge &amp; resources you would normally take years to build &amp; manage.</p>
+							<p>We are building a support network &amp; access to knowledge &amp; resources you would normally take years to build &amp; manage.</p>
 							<p>We also believe in the power of co-operative production &amp; with your help will be leading the charge into pure honey supply into the worlds markets.</p>
 						</div>
 					</div>
