--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
 							<div id="menu">
 								<ul>
 									<li class="current"><a href="/">Home</a></li>
-									<li><a href="/about.html">About</a></li>
-									<li><a href="https://hiveempireblog.wordpress.com">Blog</a></li>
-									<li><a href="/docs/">Get Started</a></li>
-									<li><a href="#mailchimp">Newsletter</a></li>
-									<li><a href="#survey">Survey</a></li>
-									<li><a href="http://app.hive-empire.com/sign-up.html">Sign Up</a></li>
-									<li><a href="http://app.hive-empire.com/sign-in.html">Sign In</a></li>
-									<li><a href="/index.html#pricing">Buy <b>HiveEmpire-Sense&#8482;</b></a></li>
+									<li><a data-ga-event="about" data-group="main-nav" data-description="Clicked about" href="/about.html">About</a></li>
+									<li><a data-ga-event="blog" data-group="main-nav" data-description="Clicked blog" href="https://hiveempireblog.wordpress.com">Blog</a></li>
+									<li><a data-ga-event="get-started" data-group="main-nav" data-description="Clicked get started" href="/docs/">Get Started</a></li>
+									<li><a data-ga-event="newsletter" data-group="main-nav" data-description="Clicked newsletter" href="#mailchimp">Newsletter</a></li>
+									<li><a data-ga-event="survey" data-group="main-nav" data-description="Clicked survey" href="#survey">Survey</a></li>
+									<li><a data-ga-event="sign-up" data-group="main-nav" data-description="Clicked sign-up" href="http://app.hive-empire.com/sign-up.html">Sign Up</a></li>
+									<li><a data-ga-event="sign-in" data-group="main-nav" data-description="Clicked sign-in" href="http://app.hive-empire.com/sign-in.html">Sign In</a></li>
+									<li><a data-ga-event="buy" data-group="main-nav" data-description="Wants to buy starter kit" href="/index.html#pricing">Buy <b>HiveEmpire-Sense&#8482;</b></a></li>
 									<!-- <li class="current"><a href="">Download App</a></li> -->
 								</ul>
 							</div>
