--- a/about.html
+++ b/about.html
@@ -92,7 +92,7 @@
 		        	<h2>About <span>HiveEmpire</span></h2>
 		        	<h4>Who we are</h4>
 		        	<p>We are a collection of technical topic specialists keen on getting involved in the beekeeping community.</p>
-		        	<p>Our aims include assisting academics gather data in this fascinating field and providing insign into the lives and processess of these fascinating creatures.</p>
+		        	<p>Our aims include assisting academics gather data in this fascinating field and providing sinsight into the lives and processes of these fascinating creatures.</p>
 		        </div>
 
 	    	</div>
@@ -100,7 +100,7 @@
 	    	<div class="span6">
 
 	        	<div class="inner inner-text">
-	        		<p>HiveEmpire aims to provide low-cost modular sensors and a revolutionary turn key monitoring solution.</p>
+	        		<p>HiveEmpire aims to provide low-cost modular sensors and turn key monitoring solution.</p>
 	        		<p>Using machine-learning and expert knowledge we plan to provide you with imperic data-driven knowledge about your hive and the processes in play.</p>
 	        		<p>Using the power of community and co-operation we plan to make bee-keeping more than a hobby and more of an obsession.</p>
 		        	<!-- <img src="pictures/desktop-inline.png" alt="Desktop" class="promoimg" /> -->
