--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 							<div id="menu">
 								<ul>
 									<li class="current"><a href="/">Home</a></li>
-									<li><a data-ga-event="about" data-group="main-nav" data-description="Clicked about" href="/about.html">About</a></li>
+<!-- 									<li><a data-ga-event="about" data-group="main-nav" data-description="Clicked about" href="/about.html">About</a></li> -->
 									<li><a data-ga-event="blog" data-group="main-nav" data-description="Clicked blog" href="https://hiveempireblog.wordpress.com">Blog</a></li>
 									<li><a data-ga-event="contact" data-group="main-nav" data-description="Clicked contact us" href="#contact-form">Contact Us</a></li>
 <!-- 									<li><a data-ga-event="get-started" data-group="main-nav" data-description="Clicked get started" href="/docs/">Get Started</a></li> -->
