--- a/index.html
+++ b/index.html
@@ -251,13 +251,13 @@
 							<a name="starter-pack"></a>
 							<ul>
 								<li><h2>Starter Kit</h2></li>
-								<li class="price"><h1><span>$ </span><strong>150</strong></h1></li>
+								<li class="price"><h1><span>$ </span><strong>120</strong></h1></li>
 								<li>1x HiveEmpire-Sense™ &amp; sensor pack</li>
 								<li>1x Temperature &amp; Humidity Sensor</li>
-								<li>4x Weight Sensors</li>
+								<li>1x Weight Sensors</li>
 								<li>Power cable</li>
-								<li>LAN cable</li>
-								<li>1 month app access free, $12 per month thereafter</li>
+								<li>LAN cable - Used to connect to the switch (wifi option available on-demand)</li>
+								<li>1 month app access free, $9.99/month thereafter</li>
 							</ul>
 							<span class="buy-now"><a href="#" class="btn buy-now">Buy Now</a></span>
 						</div>
@@ -274,9 +274,9 @@
 							<a name="sensor-pack"></a>
 							<ul>
 								<li><h2>Hive Sensor Pack</h2></li>
-								<li class="price"><h1><span>$ </span><strong>40</strong><small></small></h1></li>
+								<li class="price"><h1><span>$ </span><strong>45</strong><small></small></h1></li>
 								<li>1x Temperature &amp; Humidity Sensor</li>
-								<li>4x Weight Sensors</li>
+								<li>1x Weight Sensors</li>
 							</ul>
 							<span class="buy-now"><a href="#" class="btn buy-now">Buy Now</a></span>
 						</div>
@@ -286,25 +286,6 @@
 						<p>1x Hive Sensor Pack per hive</p>
 						<p>We provide a st&amp;ard sensor pack, the aim of which being to monitor the temperature, humidity &amp; weight of a singl Hive. But, nothing stops you from using the temp/humidity sensors on one Hive &amp; the weight Sensor on another.</p>
 						<p>You should just need to notate that in the HiveEmpire app for your own memories sake.</p>
-					</div>
-				</div>
-				<div class="row blocks">
-					<div class="span4">
-						<div class="inner secondary">
-							<ul>
-								<li><h2>Replacement HiveEmpire-Sense&#8482; Device</h2></li>
-								<li class="price"><h1><span>$ </span><strong>120</strong></h1></li>
-								<li>Power cable</li>
-								<li>LAN cable</li>
-							</ul>
-							<span class="buy-now"><a href="#" class="btn buy-now">Buy Now</a></span>
-						</div>
-					</div>
-					<div class="span8" style="padding-top:35px;">
-						<h3>Replacement HiveEmpire-Sense&#8482; Device</h3>
-						<p>Sometimes s*it happens, &amp; the device gets damaged, dropped, submerged in water or even thrown from car windows (yes, it happens).</p>
-						<p>In this case a replacement device is called for.</p>
-						<!-- <p>If the device is damaged en-route or on delivery then we will replace it free of charge.</p> -->
 					</div>
 				</div>
 				<div class="row blocks">
