--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 						<div class="inner inner-text">
 							<h2>Buy the <span>HiveEmpire-Sense&#8482;</span></h2>
 							<h4>Buy 1x HiveEmpire-Sense&#8482; &amp; its sensors via the <a data-ga-event="starter-kit" data-group="current-kit" data-description="Wants to buy starter kit" href="#starter-pack">Starter Kit</a></h4>
-							<p><b>Remember</b> 1x HiveEmpire-Sense&#8482; can run up to 50 sensors. So if you have more than 1 hive, you jsut need to buy additional <a data-ga-event="sensor-pack" data-group="current-sensors" data-description="Wants to buy sensor pack" href="#sensor-pack">Sensor Packs</a></p>
+							<p><b>Remember</b> 1x HiveEmpire-Sense&#8482; can run up to 50 sensors. So if you have more than 1 hive, you just need to buy additional <a data-ga-event="sensor-pack" data-group="current-sensors" data-description="Wants to buy sensor pack" href="#sensor-pack">Sensor Packs</a></p>
 							<p>We are constantly thinking of new sensors to add to the set &amp; are happy to take special requests</p>
 							<p>Remember you only need 1 <b>HiveEmpire-Sense&#8482;</b> to monitor up to 50 hives, so you only need an additional <a data-ga-event="sensor-pack" data-group="current-sensors" data-description="Wants to buy sensor pack" href="#sensor-pack">Sensor Pack</a> per hive.</p>
 						</div>
@@ -265,7 +265,7 @@
 					<div class="span8" style="padding-top:35px;">
 						<h3>The <b>HiveEmpire-Sense&#8482;</b> starter pack</h3>
 						<p>Contains all you need to get 1 hive setup &amp; monitored.</p>
-						<p>Remember you only need 1 <b>HiveEmpire-Sense&#8482;</b> to monitor up to 50 hives, so you only need an additional <a href="#sensor-pack">Sensor Pack</a> per hive.</p>
+						<p>Remember you only need 1 <b>HiveEmpire-Sense&#8482;</b> to monitor up to 50 hives, so you only need additional <a href="#sensor-pack">Sensor Packs</a> per hive.</p>
 					</div>
 				</div>
 				<div class="row blocks">
@@ -284,7 +284,7 @@
 					<div class="span8" style="padding-top:35px;">
 						<h3>Hive Sensor Pack</h3>
 						<p>1x Hive Sensor Pack per hive</p>
-						<p>We provide a st&amp;ard sensor pack, the aim of which being to monitor the temperature, humidity &amp; weight of a singl Hive. But, nothing stops you from using the temp/humidity sensors on one Hive &amp; the weight Sensor on another.</p>
+						<p>We provide a standard sensor pack, the aim of which being to monitor the temperature, humidity &amp; weight of a singl Hive. But, nothing stops you from using the temp/humidity sensors on one Hive &amp; the weight Sensor on another.</p>
 						<p>You should just need to notate that in the HiveEmpire app for your own memories sake.</p>
 					</div>
 				</div>
