--- a/index.html
+++ b/index.html
@@ -66,10 +66,12 @@
 				<div class="row">
 					<div class="span6">
 						<div class="inner">
-							<div class="hero">
+							<div class="hero content-markup">
 								<h1>Know your Hive</h1>
-								<h2>Hive Empire - Complete Beehive Monitoring.</h2>
-								<a href="#pricing" class="btn btn-primary">Pricing</a> <a href="/docs/" class="btn btn-secondary">Get Started</a>
+								<h2><b>Data driven beehives. Bring science to your obsession.</b></h2>
+								<p>Monitor your Hives &amp; opt-in to allow your data to be available to a global partnership of scientists and academic apiologists.</p>
+								<p><b>Do more than just produce honey. Help save the bees!</b></p>
+								<a href="#pricing" class="btn btn-primary" style="margin:10px 0px;">Pricing</a>
 							</div>
 						</div>
 					</div>
