--- a/index.html
+++ b/index.html
@@ -71,7 +71,10 @@
 								<h2><b>Data driven beehives. Bring science to your obsession.</b></h2>
 								<p>Monitor your Hives &amp; opt-in to allow your data to be available to a global partnership of scientists and academic apiologists.</p>
 								<p><b>Do more than just produce honey. Help save the bees!</b></p>
-								<a href="#pricing" class="btn btn-primary" style="margin:10px 0px;">Pricing</a>
+								<p>Sensors for just <b>$45.00<small>*</small></b> a hive.<br/>Unlimited hives via the web &amp; mobile app for <b>$5.00</b> a month.</p>
+								<a data-ga-event="starter-kit" data-group="current-kit" data-description="Wants to buy starter kit" href="#starter-pack" class="btn btn-primary">Starter Kit</a>
+								<a data-ga-event="contact-us" data-group="sensors-in-planning" data-description="Interested in Sensors in Planning" href="#contact-form" class="btn btn-success">Contact Us</a><br/><br/>
+								<p><small>* Exl HiveEmpire-Sense device</small><br/><br/></p>
 							</div>
 						</div>
 					</div>
